# Rust-GraphQL-Rental-Bookings-API

./: .gitignore  Cargo.toml  docker-compose.yml
src/: db.rs  main.rs  models.rs  routes.rs
src/graphql/: mutation.rs  query.rs  schema.rs
src/models/: booking.rs  guest.rs  mod.rs
