[package]
name = "calaceite-api-v2"
version = "0.1.0"
authors = ["Brendan Dagys <brendandagys@gmail.com>"]
description = "A GraphQL API for use with a vacation rental website."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.53"
async-graphql = { version = "3.0", default-features = false, features = ["chrono"]}
async-graphql-actix-web = "3.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.137"
sqlx = { version = "0.5", features = ["chrono", "postgres", "runtime-actix-native-tls"] }
